--- a/css/colors.css
+++ b/css/colors.css
@@ -3,8 +3,9 @@ body {
 }
 
 #div-container {
-  width: 98%;
+
   /* max-width: 300px; */
+  width: max-content;
   padding: 1rem;
   margin: auto;
   margin-top: 2rem;
@@ -14,7 +15,7 @@ body {
 }
 
 p {
-  font-size: 1rem;
+  font-size: 2rem;
   color: black;
   font-family: monospace;
 }
@@ -23,7 +24,7 @@ p {
   display: inline-block;
   padding: 1rem;
   /* width: 100px; */
-  width: 2.41%;
+  /* width: 2.41%; */
 }
 
 .div-color_descriptions {
